tests/ui/ufcs/bad-builder.stderr
error[E0599]: no function or associated item named `mew` found for struct `Vec<Q>` in the current scope
  --> $DIR/bad-builder.rs:2:15
   |
LL |     Vec::<Q>::mew()
   |               ^^^ function or associated item not found in `Vec<Q>`
   |
note: if you're trying to build a new `Vec<Q>` consider using one of the following associated functions:
      Vec::<T>::new
      Vec::<T>::with_capacity
      Vec::<T>::try_with_capacity
      Vec::<T>::from_raw_parts
      and 6 others
  --> $SRC_DIR/alloc/src/vec/mod.rs:LL:COL
help: there is an associated function `new` with a similar name
   |
LL -     Vec::<Q>::mew()
LL +     Vec::<Q>::new()
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0599`.
